Fix right column alignment to right side

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body, html {
-  font-family:  font-family: "Rubik", sans-serif;
+  font-family: "Rubik", sans-serif;
   margin: 0;
   min-height: 100vh;
   padding: 0;
@@ -90,6 +90,9 @@ flex-shrink: 0;
 
 
 .right{
+display: flex;
+flex-direction:column;
+align-items:flex-end;
   margin: 30px;
   padding: 10px;
   flex-shrink: 0;
